js/js.translator/testData/incremental/invalidation/enumEntriesInlining/lib1/l1.4.kt
@JsExport
enum class TestEnum {
    A, B
}
